--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "consolidate": "^0.14.5",
         "express": "^4.14.0",
+        "gulp-imagemin": "^3.1.1",
         "mustache": "^2.3.0",
         "normalize.css": "^5.0.0"
     },
